Fix layout bug for cover page in portrait mode on phone

--- a/portfolio-site/src/Components/CoverPage/CoverPage.module.scss
+++ b/portfolio-site/src/Components/CoverPage/CoverPage.module.scss
@@ -6,7 +6,7 @@
     flex-wrap: wrap;
     padding: 105px 95px;
     gap: 45px;
-    height: 100vh;
+    min-height: 100vh;
 
     @media screen and (max-width: 920px) {
         flex-direction: column;
